--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "chat-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server/server.js",
     "test": "mocha server/**/*.test.js",
     "test-watch": "nodemon --exec 'npm test'"
   },
   "engines": {
-    "node": "10.12.0"
+    "node": "10.15.0"
   },
   "author": "",
   "license": "ISC",
